# hs-opentelemetry-instrumentation-hasql

./: ChangeLog.md  LICENSE  README.md  hs-opentelemetry-instrumentation-hasql.cabal  package.yaml
src/OpenTelemetry/Instrumentation/: Hasql.hs
test/: Spec.hs
