cabal-version: 1.18

name:               hs-opentelemetry-instrumentation-hasql
version:            0.1.0.0
synopsis:           OpenTelemetry tracing instrumentation for the hasql Postgres client.
description:        Please see the README on GitHub at <https://github.com/monoscope-tech/hs-opentelemetry-instrumentation-hasql#readme>
category:           OpenTelemetry, Instrumentation, Database
homepage:           https://github.com/monoscope-tech/hs-opentelemetry-instrumentation-hasql#readme
bug-reports:        https://github.com/monoscope-tech/hs-opentelemetry-instrumentation-hasql/issues
author:             Monoscope Engineering
maintainer:         engineering@monoscope.tech
copyright:          2026 Monoscope, Inc.
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-doc-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/monoscope-tech/hs-opentelemetry-instrumentation-hasql

library
  exposed-modules:
      OpenTelemetry.Instrumentation.Hasql
  hs-source-dirs:
      src
  default-extensions:
      OverloadedStrings
      LambdaCase
      NamedFieldPuns
      RecordWildCards
      DerivingStrategies
      StrictData
      ScopedTypeVariables
  build-depends:
      base >=4.7 && <5
    , bytestring
    , hasql >=1.6 && <2
    , hasql-pool >=1 && <2
    , hs-opentelemetry-api >=0.1 && <1
    , text
    , unordered-containers
  default-language: Haskell2010

test-suite hs-opentelemetry-instrumentation-hasql-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  default-extensions:
      OverloadedStrings
      LambdaCase
      NamedFieldPuns
      RecordWildCards
      DerivingStrategies
      StrictData
      ScopedTypeVariables
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , hasql >=1.6 && <2
    , hasql-pool >=1 && <2
    , hs-opentelemetry-api >=0.1 && <1
    , hs-opentelemetry-instrumentation-hasql
    , text
    , unordered-containers
  default-language: Haskell2010
